<resources>
    <string name="app_name">Studex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_dont_have_account">Don\'t have account?</string>
    <string name="lbl_register_now">Register now</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_course">Course</string>
    <string name="lbl_add_student">Add Student</string>
    <string name="lbl_upload_image">Upload image</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_show_password">Show password</string>
    <string name="lbl_import">Import</string>
</resources>