<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.loginModule.ui.LoginFragment">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="360dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_username"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        android:padding="5dp"
        android:background="@drawable/bg_et_round_corner"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="14dp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_password"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="18sp"
        android:background="@drawable/bg_et_round_corner"
        android:layout_marginTop="14dp"/>

    <CheckBox
        android:id="@+id/cb_show_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginVertical="12dp"/>

    <TextView
        android:id="@+id/tv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cb_show_password"
        app:layout_constraintTop_toTopOf="@id/cb_show_password"
        app:layout_constraintBottom_toBottomOf="@id/cb_show_password"
        android:text="@string/lbl_show_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginHorizontal="8dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/cb_show_password"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:background="@color/blue_cornflower_blue"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingVertical="5dp"
        android:text="@string/lbl_login"/>

    <TextView
        android:id="@+id/tv_dont_hv_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        android:layout_marginTop="65dp"
        android:text="@string/lbl_dont_have_account"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_dont_hv_acc"
        android:layout_marginTop="8dp"
        android:background="@color/blue_cornflower_blue"
        android:padding="6dp"
        android:text="@string/lbl_register_now"
        android:textSize="14sp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>