<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.loginModule.ui.RegisterUserFragment">

    <TextView
        android:id="@+id/tv_register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/lbl_register"/>
    
    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_header"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/black"
        android:text="@string/lbl_first_name"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        android:inputType="text"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_et_round_corner"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/lbl_first_name"
        android:padding="5dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_username"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        android:background="@drawable/bg_et_round_corner"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:inputType="text"
        android:hint="@string/lbl_username"
        android:padding="5dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_password"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:background="@drawable/bg_et_round_corner"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/lbl_password"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_confirm_password"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
        android:background="@drawable/bg_et_round_corner"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:padding="5dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:hint="@string/lbl_confirm_password"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/cb_show_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@id/et_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        android:layout_marginVertical="12dp"/>

    <TextView
        android:id="@+id/tv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cb_show_password"
        app:layout_constraintTop_toTopOf="@id/cb_show_password"
        app:layout_constraintBottom_toBottomOf="@id/cb_show_password"
        android:text="@string/lbl_show_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginHorizontal="8dp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/cb_show_password"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:padding="6dp"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text="@string/lbl_register" />

</androidx.constraintlayout.widget.ConstraintLayout>