<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.homeModule.ui.AddStudentFragment">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="@id/et_first_name"
        app:layout_constraintEnd_toEndOf="@id/et_first_name"
        app:layout_constraintBottom_toTopOf="@id/tv_upload_profile"
        android:layout_marginBottom="12dp"
        android:elevation="10dp"
        app:cardCornerRadius="55dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/iv_profile_img"
            android:layout_height="120dp"
            android:layout_width="match_parent"
            android:src="@mipmap/student"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_upload_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/et_first_name"
        app:layout_constraintEnd_toEndOf="@id/et_first_name"
        app:layout_constraintBottom_toTopOf="@id/tv_first_name"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:text="@string/lbl_upload_image"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:background="@color/blue_cornflower_blue"/>

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="220dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_first_name"/>

    <TextView
        android:id="@+id/tv_compulsory_f_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintTop_toTopOf="@id/tv_first_name"
        android:textSize="14sp"
        android:textColor="@color/red_compulsory"
        android:text="*"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        android:inputType="text"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:textSize="18sp"
        android:background="@drawable/bg_et_round_corner"
        android:textColor="@color/black"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/lbl_first_name"
        android:textColorHint="@color/light_grey"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/black"
        android:text="@string/lbl_last_name"/>

    <TextView
        android:id="@+id/tv_compulsory_l_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_last_name"
        app:layout_constraintTop_toTopOf="@id/tv_last_name"
        android:textSize="14sp"
        android:textColor="@color/red_compulsory"
        android:text="*"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:background="@drawable/bg_et_round_corner"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name"
        android:padding="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:inputType="text"
        android:hint="@string/lbl_last_name"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_phone_number"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact"
        android:background="@drawable/bg_et_round_corner"
        android:padding="5dp"
        android:textColor="@color/black"
        android:inputType="number"
        android:textSize="18sp"
        android:maxLength="10"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/lbl_phone_number"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tv_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/lbl_course"/>

    <EditText
        android:id="@+id/et_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_course"
        android:background="@drawable/bg_et_round_corner"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/lbl_course"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/et_last_name"
        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_course"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:padding="4dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/lbl_add_student"/>


</androidx.constraintlayout.widget.ConstraintLayout>